# QtItches

./: .gitignore  .qmake.conf  .travis.yml  CMakeLists.txt  QtItches.pro  QtItches.qbs  README.md
.travis/: build.sh  install_ndk.sh  install_qt.sh  qconfig.pri  qt.conf
src/: CMakeLists.txt  src.pro  src.qbs
src/qtitchescontrols/: CMakeLists.txt  qmldir  qtitchesblockdroparea.cpp  qtitchesblockdroparea.h  qtitchesblockview.cpp  qtitchesblockview.h  qtitchescategorymodel.cpp  qtitchescategorymodel.h  qtitchescontrols.pro  qtitchescontrols.qbs  qtitchescontrolsglobal.h  qtitchescontrolslibrary.pri  qtitchescontrolslibrary.pro  qtitchescontrolsplugin.cpp  qtitchescontrolsplugin.pro  qtitchescontrolsplugin.qrc  qtitchescontrolsstaticplugin.pri  qtitchescontrolsstaticplugin.pro
src/qtitchescontrols/qml/controls/: BlockViewContent.qml  BooleanView.qml  ChoiceView.qml  ConstantView.qml  ExpressionView.qml  NumberView.qml  PopupOverlay.qml  StringView.qml
src/qtitchescontrols/qml/shapes/: BlockShape.qml  BooleanShape.qml  ReporterShape.qml  StackShape.qml
src/qtitchescore/: CMakeLists.txt  qmldir  qtitchesactor.cpp  qtitchesactor.h  qtitchesblock.cpp  qtitchesblock.h  qtitchesblocklibrary.cpp  qtitchesblocklibrary.h  qtitchescore.pro  qtitchescore.qbs  qtitchescoreglobal.h  qtitchescorelibrary.pri  qtitchescorelibrary.pro  qtitchescoreplugin.cpp  qtitchescoreplugin.pro  qtitchescoreplugin.qrc  qtitchescorestaticplugin.pri  qtitchescorestaticplugin.pro  qtitchesexpression.cpp  qtitchesexpression.h  qtitchesmetaenumiterator.cpp  qtitchesmetaenumiterator.h  qtitchesparameter.cpp  qtitchesparameter.h  qtitchesproject.cpp  qtitchesproject.h  qtitchesscript.cpp  qtitchesscript.h  qtitchesscriptcontext.cpp  qtitchesscriptcontext.h  qtitchessprite.cpp  qtitchessprite.h  qtitchesstage.cpp  qtitchesstage.h  qtitchesutils.cpp  qtitchesutils.h
src/qtitchescore/qml/: SpriteBlock.qml  SpriteExpression.qml
src/qtitchescore/qml/control/: DoForever.qml  DoIf.qml  DoIfElse.qml  DoRepeat.qml  DoRepeatUntil.qml  If.qml  Repeat.qml  Stop.qml  WaitSecs.qml  WaitUntil.qml
src/qtitchescore/qml/events/: WhenFlagClicked.qml  WhenThisSpriteClicked.qml
src/qtitchescore/qml/looks/: Say.qml  SayForSecs.qml  Think.qml  ThinkForSecs.qml
src/qtitchescore/qml/motion/: Direction.qml  GoForward.qml  GotoXY.qml  TurnLeft.qml  TurnRight.qml  TurnTo.qml  XPos.qml  YPos.qml
src/qtitchesdemo/: CMakeLists.txt  main.cpp  main.qrc  qtitchesdemo.pro  qtitchesdemo.qbs
src/qtitchesdemo/android/: AndroidManifest.xml
src/qtitchesdemo/projects/: Project1.qml  Project2.qml  Project3.qml
src/qtitchesdemo/qml/: BlockPicker.qml  ContextChooser.qml  ScriptView.qml  Stage1.qml  Stage2.qml  Stage3.qml  StageView.qml  main.qml
tests/auto/: auto.pro  testcase.pri  tst_blockview.cpp  tst_blockview.pro  tst_expressions.cpp  tst_expressions.pro
